# cascade

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md  RELEASING.md  TESTING.md  act-wrapper  approve_or_deny.sh  approve_or_deny_signed.sh  build.rs  cascade.conf  clippy.toml  demo-setup.sh  demo.sh  review-unsigned-zone.sh
.github/: pull_request_template.md
.github/actions/download-or-build/: action.yml
.github/actions/prepare-systest-env/: action.yml
.github/actions/print-logfiles/: action.yml
.github/actions/set-build-profile/: action.yml
.github/actions/setup-and-start-cascade/: action.yml
.github/workflows/: ci.yml  pkg.yml  system-tests.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: args.rs  lib.rs
crates/cfg/src/file/: mod.rs  v1.rs
crates/cli/: Cargo.toml
crates/cli/src/: ansi.rs  args.rs  client.rs  main.rs  tui.rs
crates/cli/src/commands/: catalog.rs  debug.rs  hsm.rs  keyset.rs  mod.rs  policy.rs  status.rs  template.rs  tsig.rs  zone.rs
crates/zonedata/: Cargo.toml
crates/zonedata/src/: abs.rs  applier.rs  auth.rs  builder.rs  cleaner.rs  data.rs  diff.rs  lib.rs  persister.rs  reader.rs  rel.rs  restorer.rs  viewer.rs  writer.rs
crates/zonedata/src/storage/: mod.rs  states.rs  transitions.rs
demo/: demo.sh
doc/manual/: .gitignore  Makefile
doc/manual/source/: approval-hooks.rst  architecture.rst  before-you-start.rst  building.rst  catalog-zones.rst  cli.rst  conf.py  faq.rst  glossary.rst  hsms.rst  importing-keys.rst  incremental-signing.rst  index.rst  installation.rst  intro.rst  key-management.rst  limitations.rst  maintenance-mode.rst  metrics.rst  nethsm.rst  nsd.rst  offline-ksk.rst  primaries-and-secondaries.rst  quick-start.rst  review-hooks.rst  smartcard-hsm.rst  softhsm.rst  thales.rst  troubleshooting.rst  zone-transfers.rst
etc/: config.system.toml  config.template.toml  config.toml  config.toml.system-service  policy.template.toml
integration-tests/: benchmark-test.yml  system-tests.yml
integration-tests/all-rr-types/: all.rr.org
integration-tests/axfr-in-large/: example.test.zone  example.test.zone.signed
integration-tests/cascade-test-image/: Dockerfile
integration-tests/incremental-signing/reference-output/: incremental-signing-test1-input2.zone.nsec.signed.sorted  incremental-signing-test1-input2.zone.nsec.zmd384.signed.sorted  incremental-signing-test1-input2.zone.nsec3-opt-out.signed.sorted  incremental-signing-test1-input2.zone.nsec3-opt-out.zmd384.signed.sorted  incremental-signing-test1-input2.zone.nsec3.signed.sorted  incremental-signing-test1-input2.zone.nsec3.zmd384.signed.sorted  incremental-signing-test2-input2.zone.nsec.signed.sorted  incremental-signing-test2-input2.zone.nsec.zmd384.signed.sorted  incremental-signing-test2-input2.zone.nsec3-opt-out.signed.sorted  incremental-signing-test2-input2.zone.nsec3-opt-out.zmd384.signed.sorted  incremental-signing-test2-input2.zone.nsec3.signed.sorted  incremental-signing-test2-input2.zone.nsec3.zmd384.signed.sorted  incremental-signing-test3-input2.zone.nsec.signed.sorted  incremental-signing-test3-input2.zone.nsec.zmd384.signed.sorted  incremental-signing-test3-input2.zone.nsec3-opt-out.signed.sorted  incremental-signing-test3-input2.zone.nsec3-opt-out.zmd384.signed.sorted  incremental-signing-test3-input2.zone.nsec3.signed.sorted  incremental-signing-test3-input2.zone.nsec3.zmd384.signed.sorted  incremental-signing-test4-input2.zone.nsec.signed.sorted  incremental-signing-test4-input2.zone.nsec.zmd384.signed.sorted  incremental-signing-test4-input2.zone.nsec3-opt-out.signed.sorted  incremental-signing-test4-input2.zone.nsec3-opt-out.zmd384.signed.sorted  incremental-signing-test4-input2.zone.nsec3.signed.sorted  incremental-signing-test4-input2.zone.nsec3.zmd384.signed.sorted  incremental-signing-test4-input3.zone.nsec.signed.sorted  incremental-signing-test4-input3.zone.nsec.zmd384.signed.sorted  incremental-signing-test4-input3.zone.nsec3-opt-out.signed.sorted  incremental-signing-test4-input3.zone.nsec3-opt-out.zmd384.signed.sorted  incremental-signing-test4-input3.zone.nsec3.signed.sorted  incremental-signing-test4-input3.zone.nsec3.zmd384.signed.sorted  incremental-signing-test5-input2.zone.nsec.signed.sorted  incremental-signing-test5-input2.zone.nsec.zmd384.signed.sorted  (+4 more)
integration-tests/load-signed-apex-cname/: example.test.zone
integration-tests/multipart-axfr/: example.test.zone
integration-tests/scripts/: add-test.sh  common.sh  get-default-path.sh  manage-test-environment.sh  sed-config-dirs.sh
integration-tests/sign-using-a-hsm/: cascade-hsm-bridge.toml
integration-tests/strip-dnssec-rrs/: example.test
pkg/common/: cascade.service  cascaded.service  cascaded.socket
pkg/debian/: postinst  postrm
pkg/rpm/: rpmlintrc  scriptlets.toml
pkg/rules/: packages-to-build.yml
pkg/test-scripts/: test-cascade.sh
scripts/: manage-test-environment.sh  sed-config-dirs.sh
src/: api.rs  center.rs  comms.rs  daemon.rs  lib.rs  log.rs  main.rs  manager.rs  metrics.rs  payload.rs  util.rs
src/catalog/: mod.rs  produce.rs  reconcile.rs  runtime.rs  transfer.rs
src/cli/: args.rs  client.rs
src/common/: ansi.rs  datetime.rs  light_weight_zone.rs  light_weight_zone_no_hashset.rs  mod.rs  net.rs  scheduler.rs  tsig.rs
src/config/: args.rs  env.rs  mod.rs
src/loader/: mod.rs  refresh.rs  server.rs  zone.rs  zonefile.rs
src/persistence/: mod.rs  persist.rs  restore.rs  stream.rs  zone.rs
src/policy/: mod.rs
src/server/: mod.rs  notify.rs  request.rs  service.rs
src/signer/: full.rs  incremental.rs  keys.rs  mod.rs  queue.rs  status.rs  zone.rs
src/state/: mod.rs  v1.rs
src/targets/: central_command.rs
src/tests/: util.rs
src/tsig/: mod.rs
src/units/: http_server.rs  key_manager.rs  mod.rs  zone_loader.rs  zone_server.rs  zone_signer.rs
src/zone/: contents.rs  instance.rs  loader.rs  lock.rs  machine.rs  mod.rs  review.rs  storage.rs
src/zonemaintenance/: maintainer.rs  types.rs
tests/: launch.rs
tests/process/: fs.rs  mod.rs
(+114 files in other folders)
